--- a/Pemesanan/index.html
+++ b/Pemesanan/index.html
@@ -141,8 +141,7 @@
                                                         aria-describedby=" basic-addon3 basic-addon4"></textarea>
                                                     <!-- <button class="btn btn-outline-secondary" type="button" id="hapus">Delete</button> -->
                                                 </div>
-                                                <div class="form-text" id="basic-addon4">Jika terdapat file pendukung
-                                                    bagi pesanan silahkan lampirkan berbentuk link.</div>
+                                                <div class="form-text" id="basic-addon4">Tambahkan catatan *Jika Ada</div>
                                             </div>
                                         </div>
                                     </div>
