--- a/SunshineMart/index.html
+++ b/SunshineMart/index.html
@@ -154,7 +154,7 @@
                                     <div id="about-content-box-inner">
                                         <div class="content-title wow animated fadeInDown" data-wow-duration="0.6s"
                                         data-wow-delay=".4s">
-                                             <h3>Tentang Sunshine Mart</h3>
+                                             <h3>About Sunshine Mart</h3>
                                              <div class="content-title-underline"></div>
                                         </div>
 
@@ -183,7 +183,7 @@
             <br>
 
 
-            <!-- Work Section -->
+            <!-- Activities Section -->
             <section id="activities">
 
                 <div class="content-box">
