--- a/Pemesanan/index.html
+++ b/Pemesanan/index.html
@@ -283,13 +283,13 @@
 
                                     "Halo saya Konsumen ingin melakukan pemesanan ke Sunshine Mart pada hari" + " " + "*" + waktu + " " + "WIB" + "*" + " " + " " +
                                     ",atas Nama" + " " + " " + "*" + nama_konsumen + "*" + " " + " " +
-                                    "dengan Nomor Headphone" + " " + "*" + headphone + "*" + " " + " " +
+                                    "dengan Nomor HP" + " " + "*" + headphone + "*" + " " + " " +
                                     "Untuk ketentuan permintaan akan saya sampaikan sebagai berikut.\n\n" +
                                     "Jumlah" + "\t" + ":" + " " + order + "\n\n" +
                                     "Alamat" + "\t" + ":" + " " + alamat + "\n\n" +
                                     "Deskripsi Pemesanan:" + "\t" + ":" + " " + deskripsi + "\n\n" + 
                                     "Data Tambahan" + "\t" + ":" + " " + link + "\n\n" + 
-                                    "Terimakasih atas bantuannya. Apabila ada lampiran gambar atau file akan kirimkan dibawah ini.";
+                                    "Terimakasih";
 
 
                                 var url = "https://wa.me/6288289161542?text=" + encodeURIComponent(message);
@@ -314,13 +314,13 @@
                 var message =
                 "Halo saya Konsumen ingin melakukan pemesanan ke Sunshine Mart pada hari" + " " + "*" + waktu + " " + "WIB" + "*" + " " + " " +
                 ",atas Nama" + " " + " " + "*" + nama_konsumen + "*" + " " + " " +
-                "dengan Nomor Headphone" + " " + "*" + headphone + "*" + " " + " " +
+                "dengan Nomor HP" + " " + "*" + headphone + "*" + " " + " " +
                 "Untuk ketentuan permintaan akan saya sampaikan sebagai berikut.\n\n" +
                 "Jumlah" + "\t" + ":" + " " + order + "\n\n" +
                 "Alamat" + "\t" + ":" + " " + alamat + "\n\n" +
                 "Deskripsi Pemesanan:" + "\t" + ":" + " " + deskripsi + "\n\n" + 
                 "Data Tambahan" + "\t" + ":" + " " + link + "\n\n" + 
-                "Terimakasih atas bantuannya. Apabila ada lampiran gambar atau file akan kirimkan dibawah ini.";
+                "Terimakasih.";
 
 
                 var url = "https://wa.me/6288289161542?text=" + encodeURIComponent(message);
